css menu overflow fix

--- a/src/css/atlantis.css
+++ b/src/css/atlantis.css
@@ -555,7 +555,7 @@ body {
     position: relative;
     max-height: calc(100vh - 75px);
     min-height: 100%;
-    overflow: auto !important;
+    overflow-y: auto !important;
     width: 100%;
     z-index: 4;
     padding-bottom: 100px;
